--- a/templates/meal.html
+++ b/templates/meal.html
@@ -1,64 +1,67 @@
 {% extends "layout.html" %}
+
 {% block img %}
 <header class="masthead" style="background-image: url('../static/img/bread.jpg')">
 {% endblock %} 
+
 {% block header %}
     <h1>Cook with Us</h1>
     <span class="subheading">Recipes created with passion and love</span>
 {% endblock %}
-{% block content %}
-<div class="container">
-    
-    {% if user == recipe.author %}
-    <div class="row justify-content-between recipe_header">
-        <div class="recipe_name col-7">
-            <h2>{{recipe.name}}</h2>
-        </div>
-        <div class="header_icons col-5">
-            <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"><i class="fas fa-edit green"></i></a>
-            <a href="{{ url_for('delete_recipe',recipe_id=recipe._id)}}"><i class="fas fa-trash-alt red"></i></a>
-        </div>
-    </div>
-    {% else %}
-     <div class="row justify-content-between recipe_header">
-        <div class="recipe_name col-12">
-            <h2>{{recipe.name}}</h2>
-        </div>
-    </div>
-    {% endif %}
-    
-    
-    <div class="row">
-        <div class="col author">
-            <p>by {{recipe.author}}</p>
-        </div>
-    </div>
 
-<hr>
-<div class="row">
-    <div class=" col-md-6 meal_image" >
-        <img style="width:100%" src="{{ recipe.image}}" alt="Image for {{recipe.name}}">
-    </div>
-   
-    <div class=" col-md-5 offset-md-1">
-        <h5 >Ingredients:</h5>
+{% block content %}
+    <div class="container">
         
-        <ul>
-            {% for ingredient in recipe.ingredient %}
-                <li>{{ingredient}}</li>
-            {% endfor %}
-        </ul>
-    </div>
+        <!--User verification, if it his recipe he can edit and delete it -->
+        
+        {% if user == recipe.author %}
+            <div class="row justify-content-between recipe_header">
+                <div class="recipe_name col-7">
+                    <h2>{{recipe.name}}</h2>
+                </div>
+                <div class="header_icons col-5">
+                    <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"><i class="fas fa-edit green"></i></a>
+                    <a href="{{ url_for('delete_recipe',recipe_id=recipe._id)}}"><i class="fas fa-trash-alt red"></i></a>
+                </div>
+            </div>
+        {% else %}
+             <div class="row justify-content-between recipe_header">
+                <div class="recipe_name col-12">
+                    <h2>{{recipe.name}}</h2>
+                </div>
+            </div>
+        {% endif %}
+        
+        
+        <div class="row">
+            <div class="col author">
+                <p>by {{recipe.author}}</p>
+            </div>
+        </div>
     
-    <div class="col-md-12">
-        <br>
-        <h4>Preparation directions</h3>
-          <ol>
-             {% for step in recipe.step %}
-                    <li>{{step}}</li>
-             {% endfor %}
-          </ol>
+    <hr>
+    <div class="row">
+        <div class=" col-md-6 meal_image" >
+            <img style="width:100%" src="{{ recipe.image}}" alt="Image for {{recipe.name}}">
+        </div>
+       
+        <div class=" col-md-5 offset-md-1">
+            <h5 >Ingredients:</h5>
+            <ul>
+                {% for ingredient in recipe.ingredient %}
+                    <li>{{ingredient}}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        
+        <div class="col-md-12">
+            <br>
+            <h4>Preparation directions</h3>
+              <ol>
+                 {% for step in recipe.step %}
+                        <li>{{step}}</li>
+                 {% endfor %}
+              </ol>
+        </div>
     </div>
-    
-</div>
 {% endblock %}
