--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@
 .tooltipp .tooltiptext {
   visibility: hidden;
   width: 120px;
-  background-color: #2f2f2f;
+  background-color: #f2f2f2;
   color: #222;
   text-align: center;
   border-radius: 4px;
@@ -58,10 +58,6 @@
   z-index: 1;
   left:-12px;
   top:35px;
-}
-
-.tooltipp:hover .tooltiptext {
-  visibility: visible;
 }
 
 
@@ -153,4 +149,9 @@
   .animated i{
   	top:25%;
   }
+  
+  .tooltipp:hover .tooltiptext {
+    visibility: visible;
+  }
+  
 }
